--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.apache.hadoop</groupId>
     <artifactId>hadoop</artifactId>
-    <version>0.1</version>
+    <version>0.1.2-dev</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -95,6 +95,13 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <encoding>${compiler.encoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- 打包不执行单元测试-->
+                    <skip>true</skip>
                 </configuration>
             </plugin>
             <!-- 打工程包插件 -->
