--- a/package.xml
+++ b/package.xml
@@ -5,10 +5,10 @@
         xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.3 http://maven.apache.org/xsd/assembly-1.1.3.xsd">
     <id>package</id>
     <formats>
-        <format>tar.gz</format>
+        <format>dir</format>
     </formats>
     <!-- 改为false不会出现两层相同的目录 -->
-    <includeBaseDirectory>true</includeBaseDirectory>
+    <includeBaseDirectory>false</includeBaseDirectory>
     <fileSets>
         <!-- target下*.jar打包在tar.gz的根目录 -->
         <fileSet>
@@ -19,6 +19,13 @@
             </includes>
             <excludes>
                 <exclude>*-tests.jar</exclude>
+            </excludes>
+        </fileSet>
+        <fileSet>
+            <directory>${basedir}/src/main/resources</directory>
+            <outputDirectory>/</outputDirectory>
+            <excludes>
+                <exclude>*.xml</exclude>
             </excludes>
         </fileSet>
     </fileSets>
