--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,15 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <!-- javadoc插件 -->
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <!-- 编译插件 -->
             <plugin>
@@ -129,6 +138,27 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <!-- javadoc插件 -->
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <reportOutputDirectory>target/classes/docs</reportOutputDirectory>
+                    <destDir>javadoc</destDir>
+                    <charset>UTF-8</charset>
+                    <encoding>UTF-8</encoding>
+                    <docencoding>UTF-8</docencoding>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- 打工程包插件 -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -137,7 +167,8 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
                         <!-- 引用的assembly配置文件，可以用多个，即可以同时打包多个格式的包 -->
-                        <descriptor>package.xml</descriptor>
+                        <descriptor>gzip.xml</descriptor>
+                        <descriptor>dir.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
