--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Java template
 # Compiled class file
-.idea/*
-.gitignore
+.idea
 target
 logs
 tmp
